move connection type logic into a separate method

--- a/HsReconnectTool/HsReconnectTool.csproj
+++ b/HsReconnectTool/HsReconnectTool.csproj
@@ -67,6 +67,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Util.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="FloatReconnectButton.cs">
       <SubType>Form</SubType>
