--- a/HsReconnectTool/UtilLib/app.config
+++ b/HsReconnectTool/UtilLib/app.config
@@ -14,10 +14,10 @@
             <setting name="DisconnectIntervalMax" serializeAs="String">
                 <value>10</value>
             </setting>
-            <setting name="CloseButtonPosX" serializeAs="String">
+            <setting name="DisconnectButtonPosX" serializeAs="String">
                 <value>50</value>
             </setting>
-            <setting name="CloseButtonPosY" serializeAs="String">
+            <setting name="DisconnectButtonPosY" serializeAs="String">
                 <value>50</value>
             </setting>
             <setting name="DisablePrivilegeWarning" serializeAs="String">
